fix(portfolio): logo spacing lol

--- a/src/components/landingpage/landing.css
+++ b/src/components/landingpage/landing.css
@@ -246,7 +246,7 @@ span.logo {
         width: 35px;
     }
 
-    span.logo {
+    .logo {
         bottom: 60px;
     }
 }
